deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: profile-ui
  annotations: 
    linkerd.io/inject: ingress
spec:
  replicas: 1  
  selector:
    matchLabels:
      pod: profile-ui
  template:
    metadata:
      labels: 
        pod: profile-ui
    spec:
      containers:
      - image: milung/profile-ui
        name: profile-ui        
        ports:
        - name: module
          containerPort: 80
        - name: avatars
          containerPort: 8081
        resources:
          limits:
            cpu: '0.1'
            memory: '320M'
          requests:
            cpu: '0.01'
            memory: '32M'
