deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profile-ui
spec: 
  selector:
    pod: profile-ui
  ports:
  - name: http-ui
    port: 80
    protocol: TCP
    targetPort: 80  
  - name: avatar
    port: 8081
    protocol: TCP
    targetPort: 8081
